--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,13 @@
     <string name="title_activity_map_direction">Map</string>
     <string name="logout">Logout</string>
 
+    <!-- day -->
+    <string name="monday">จันทร์</string>
+    <string name="tuesday">อังคาร</string>
+    <string name="wednesday">พุธ</string>
+    <string name="thursday">พฤหัสบดี</string>
+    <string name="friday">ศุกร์</string>
+    <string name="saturday">เสาร์</string>
+    <string name="sunday">อาทิตย์</string>
 
 </resources>
